--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
 			</feature>
 		</config-file>
 
-		<source-file src="src/android/GladiusBarcodeScanner.java" target-dir="src/com/eyc/plugins/GladiusBarcodeScanner" />
+		<source-file src="src/android/GladiusBarcodeScanner.java" target-dir="src/com/eyc/plugins" />
+		<source-file src="src/android/GladiusScanReceiver.java" target-dir="src/com/eyc/plugins" />
 	</platform>
 </plugin>
